--- a/app/src/main/res/layout-v21/fragment_home.xml
+++ b/app/src/main/res/layout-v21/fragment_home.xml
@@ -88,6 +88,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/regular_gap"
+            android:background="@android:color/white"
             android:minHeight="100dp">
             <LinearLayout style="@style/main_features_layout_style">
                 <ImageView
@@ -141,8 +143,11 @@
             android:text="@string/chrysus_news_header"/>
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/news_rv"
+            android:background="@android:color/white"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"/>
 
     </LinearLayout>
 </LinearLayout>
