--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,6 @@
         android:minHeight="100dp"
         android:background="@color/colorPrimary">
         <ImageView
-            android:id="@+id/user_profpic_img"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
@@ -26,7 +25,7 @@
             android:padding="@dimen/regular_gap"
             android:orientation="vertical">
             <TextView
-                android:id="@+id/user_fullname_tv"
+                android:id="@+id/user_fullname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/name_placeholder"
@@ -40,7 +39,7 @@
                 style="@style/white_text"
                 android:textSize="@dimen/small_text"/>
             <TextView
-                android:id="@+id/user_balance_tv"
+                android:id="@+id/user_balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_white_background"
@@ -68,7 +67,6 @@
                 android:textSize="@dimen/small_text"
                 android:text="@string/current_temperature"/>
             <TextView
-                android:id="@+id/temperature_tv"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
@@ -90,6 +88,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/regular_gap"
+            android:background="@android:color/white"
             android:minHeight="100dp">
             <LinearLayout style="@style/main_features_layout_style">
                 <ImageView
@@ -145,7 +145,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/news_rv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"/>
 
     </LinearLayout>
 </LinearLayout>
