--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/large_gap"
         android:src="@drawable/thunder"
+        android:tint="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimary"
         />
 
