--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,7 @@
         <item name="android:padding">@dimen/small_gap</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">@dimen/feature_image</item>
+        <item name="android:tint">@color/colorPrimary</item>
     </style>
 
     <style name="section_style">
