--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,14 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".history.HistoryFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/history_fragment" />
+        android:layout_height="wrap_content"
+        android:minHeight="100dp"
+        android:background="@color/colorPrimary">
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="@dimen/regular_gap"
+            android:src="@android:drawable/picture_frame"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:padding="@dimen/regular_gap"
+            android:orientation="vertical">
 
-</FrameLayout>
+            <TextView
+                android:id="@+id/user_fullname"
+                style="@style/white_text"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                android:text="@string/payment_history"
+                android:textSize="@dimen/large_text"
+                android:layout_marginTop="@dimen/large_gap"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/completed_payment"
+            android:textSize="@dimen/large_text"
+            android:layout_marginTop="@dimen/large_gap"
+            android:layout_marginLeft="@dimen/small_gap"
+            android:textColor="@color/common_google_signin_btn_text_light_pressed"
+            style="@style/section_header_style" />
+
+        <View
+            android:layout_width="380dp"
+            android:layout_height="2dp"
+            android:layout_marginLeft="@dimen/small_gap"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="@dimen/large_gap"
+            android:background="@color/common_google_signin_btn_text_light_pressed" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="McDonald's Dago"
+            android:layout_marginLeft="@dimen/small_gap"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/small_gap"
+            android:layout_marginBottom="@dimen/regular_gap"
+            android:text="Payment Completed"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="IDR 1,470,000"
+            android:layout_marginLeft="@dimen/small_gap"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/price"
+            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="textEnd"
+            android:text="5 Jan 19, 16.33"
+            android:layout_marginRight="@dimen/regular_gap"/>
+    </LinearLayout>
+
+</LinearLayout>
