--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -61,6 +61,13 @@
             android:layout_marginBottom="@dimen/large_gap"
             android:background="@color/common_google_signin_btn_text_light_pressed" />
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/completed_payment"
+            android:background="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
