--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -10,8 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="100dp"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:minHeight="100dp">
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -22,17 +22,17 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="5"
-            android:padding="@dimen/regular_gap"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/regular_gap">
 
             <TextView
                 android:id="@+id/user_fullname"
                 style="@style/white_text"
                 android:layout_width="400dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/large_gap"
                 android:text="@string/payment_history"
-                android:textSize="@dimen/large_text"
-                android:layout_marginTop="@dimen/large_gap"/>
+                android:textSize="@dimen/large_text"/>
 
         </LinearLayout>
 
@@ -44,14 +44,14 @@
         android:orientation="vertical">
 
         <TextView
+            style="@style/section_header_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/completed_payment"
-            android:textSize="@dimen/large_text"
-            android:layout_marginTop="@dimen/large_gap"
             android:layout_marginLeft="@dimen/small_gap"
+            android:layout_marginTop="@dimen/large_gap"
+            android:text="@string/completed_payment"
             android:textColor="@color/common_google_signin_btn_text_light_pressed"
-            style="@style/section_header_style" />
+            android:textSize="@dimen/large_text" />
 
         <View
             android:layout_width="380dp"
@@ -63,9 +63,9 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/completed_payment"
-            android:background="@android:color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/white"
             android:orientation="horizontal"/>
     </LinearLayout>
 
