--- a/app/src/main/res/layout/news_view.xml
+++ b/app/src/main/res/layout/news_view.xml
@@ -22,6 +22,7 @@
             <TextView
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
+                android:textAlignment="viewEnd"
                 android:id="@+id/news_list_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
