--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_settings"
+        android:title="@string/logout"
+        android:icon="@drawable/ic_setting_white"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/action_logout"
         android:title="@string/logout"
         android:icon="@drawable/logout"
