--- a/app/src/main/res/layout/activity_send_money.xml
+++ b/app/src/main/res/layout/activity_send_money.xml
@@ -58,5 +58,13 @@
             android:inputType="number"/>
         </LinearLayout>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="@string/send_money_send_btn_text"
+            style="@style/white_text"/>
+
     </LinearLayout>
 </LinearLayout>
