add logout, register token

--- a/app/src/main/res/layout/activity_send_money.xml
+++ b/app/src/main/res/layout/activity_send_money.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".payment.NFCPayActivity">
+    tools:context=".payment.activity.NFCPayActivity">
 
     <TextView
+        android:id="@+id/send_money_bar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
@@ -16,11 +17,14 @@
         android:textAlignment="center"
         android:gravity="center_vertical"
         style="@style/white_text"/>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
+        android:layout_below="@id/send_money_bar"
         android:padding="@dimen/large_gap">
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,6 +63,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/send_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
@@ -67,4 +72,20 @@
             style="@style/white_text"/>
 
     </LinearLayout>
-</LinearLayout>
+
+    <View
+        android:id="@+id/modal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#CC000000"
+        android:visibility="invisible">
+    </View>
+
+    <ProgressBar
+        android:id="@+id/send_money_progress_bar"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
+
+</RelativeLayout>
