--- a/app/src/main/res/layout/activity_receive_money.xml
+++ b/app/src/main/res/layout/activity_receive_money.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".payment.NFCPayActivity">
+    tools:context=".payment.activity.NFCPayActivity">
 
     <TextView
         android:layout_width="match_parent"
