--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -6,38 +6,6 @@
     android:orientation="vertical"
     tools:context=".history.HistoryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:minHeight="100dp">
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:padding="@dimen/regular_gap"
-            android:src="@android:drawable/picture_frame"/>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:orientation="vertical"
-            android:padding="@dimen/regular_gap">
-
-            <TextView
-                android:id="@+id/user_fullname"
-                style="@style/white_text"
-                android:layout_width="400dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/large_gap"
-                android:text="@string/payment_history"
-                android:textSize="@dimen/large_text"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -51,12 +19,13 @@
             android:layout_marginTop="@dimen/large_gap"
             android:text="@string/completed_payment"
             android:textColor="@color/common_google_signin_btn_text_light_pressed"
-            android:textSize="@dimen/large_text" />
+            android:textSize="@dimen/regular_text" />
 
         <View
-            android:layout_width="380dp"
+            android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginLeft="@dimen/small_gap"
+            android:layout_marginRight="@dimen/small_gap"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="@dimen/large_gap"
             android:background="@color/common_google_signin_btn_text_light_pressed" />
@@ -64,7 +33,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/completed_payment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@android:color/white"
             android:orientation="horizontal"/>
     </LinearLayout>
