--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,6 +8,7 @@
     tools:context=".profile.ProfileFragment">
 
 
+
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="200dp"
@@ -17,6 +18,9 @@
         android:layout_alignParentEnd="true"
         tools:ignore="MissingConstraints"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -104,8 +108,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView2" />
             </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
-
+    </ScrollView>
 
 </RelativeLayout>
