add sharedpref for news recommendation

--- a/app/src/main/res/layout-v21/fragment_home.xml
+++ b/app/src/main/res/layout-v21/fragment_home.xml
@@ -150,6 +150,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/news_section"
             style="@style/section_style">
             <TextView
                 style="@style/section_header_style"
