--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,151 +7,163 @@
     android:background="@color/colorBackground"
     tools:context=".home.HomeFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="100dp"
-        android:background="@color/colorPrimary">
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:padding="@dimen/regular_gap"
-            android:src="@android:drawable/picture_frame"/>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:padding="@dimen/regular_gap"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/user_fullname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/name_placeholder"
-                android:textSize="@dimen/regular_text"
-
-                style="@style/white_text" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/current_balance"
-                style="@style/white_text"
-                android:textSize="@dimen/small_text"/>
-            <TextView
-                android:id="@+id/user_balance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_white_background"
-                android:backgroundTint="@android:color/white"
-                android:padding="5sp"
-                android:text="@string/balance_placeholder"
-                android:textSize="@dimen/medium_text"
-                style="@style/red_text" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:padding="@dimen/small_gap"
-            android:orientation="vertical">
-            <TextView
-                android:layout_marginTop="@dimen/regular_gap"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                style="@style/white_text"
-                android:textSize="@dimen/small_text"
-                android:text="@string/current_temperature"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
-                style="@style/white_text"
-                android:textAlignment="center"
-                android:textSize="@dimen/large_text"
-                android:text="@string/temperature_placeholder"/>
-        </LinearLayout>
-
-
-
-    </LinearLayout>
-
-    <LinearLayout style="@style/section_style">
-        <TextView
-            android:text="@string/main_features_headline"
-            style="@style/section_header_style" />
-
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/regular_gap"
-            android:background="@android:color/white"
-            android:minHeight="100dp">
+            android:orientation="vertical">
             <LinearLayout
-                android:id="@+id/nfc_pay"
-                style="@style/main_features_layout_style">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="100dp"
+                android:background="@color/colorPrimary">
                 <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:padding="@dimen/regular_gap"
+                    android:src="@android:drawable/picture_frame"/>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:padding="@dimen/regular_gap"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/user_fullname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/name_placeholder"
+                        android:textSize="@dimen/regular_text"
+
+                        style="@style/white_text" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/current_balance"
+                        style="@style/white_text"
+                        android:textSize="@dimen/small_text"/>
+                    <TextView
+                        android:id="@+id/user_balance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/rounded_white_background"
+                        android:backgroundTint="@android:color/white"
+                        android:padding="5sp"
+                        android:text="@string/balance_placeholder"
+                        android:textSize="@dimen/medium_text"
+                        style="@style/red_text" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
                     android:padding="@dimen/small_gap"
-                    style="@style/main_features_image_style"
-                    android:src="@drawable/nfc"/>
-                <TextView
-                    style="@style/main_features_subtitle_style"
-                    android:text="@string/nfc_pay"
-                    />
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/city"
+                        android:layout_marginTop="@dimen/regular_gap"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        style="@style/white_text"
+                        android:textSize="@dimen/medium_text"
+                        android:text="@string/city_placeholder"/>
+                    <TextView
+                        android:id="@+id/temperature"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="3"
+                        style="@style/white_text"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/large_text"
+                        android:text="@string/temperature_placeholder"/>
+                </LinearLayout>
+
+
+
             </LinearLayout>
-            <LinearLayout
-                android:id="@+id/qr_pay"
-                style="@style/main_features_layout_style">
-                <ImageView
-                    android:src="@drawable/nfc"
-                    style="@style/main_features_image_style" />
+
+            <LinearLayout style="@style/section_style">
                 <TextView
-                    style="@style/main_features_subtitle_style"
-                    android:text="@string/qr_pay"
-                    />
+                    android:text="@string/main_features_headline"
+                    style="@style/section_header_style" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/regular_gap"
+                    android:background="@android:color/white"
+                    android:minHeight="100dp">
+                    <LinearLayout
+                        android:id="@+id/nfc_pay"
+                        style="@style/main_features_layout_style">
+                        <ImageView
+                            android:padding="@dimen/small_gap"
+                            style="@style/main_features_image_style"
+                            android:src="@drawable/nfc"/>
+                        <TextView
+                            style="@style/main_features_subtitle_style"
+                            android:text="@string/nfc_pay"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/qr_pay"
+                        style="@style/main_features_layout_style">
+                        <ImageView
+                            android:src="@drawable/qr_code_placeholder"
+                            style="@style/main_features_image_style" />
+                        <TextView
+                            style="@style/main_features_subtitle_style"
+                            android:text="@string/qr_pay"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/send_money"
+                        style="@style/main_features_layout_style">
+                        <ImageView
+                            style="@style/main_features_image_style"
+                            android:src="@drawable/paper_plane"/>
+                        <TextView
+                            style="@style/main_features_subtitle_style"
+                            android:text="@string/send_money"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/receive_money"
+                        style="@style/main_features_layout_style">
+                        <ImageView
+                            style="@style/main_features_image_style"
+                            android:src="@drawable/receive_money"/>
+                        <TextView
+                            style="@style/main_features_subtitle_style"
+                            android:text="@string/receive_money"
+                            />
+                    </LinearLayout>
+                </LinearLayout>
+
             </LinearLayout>
+
             <LinearLayout
-                android:id="@+id/send_money"
-                style="@style/main_features_layout_style">
-                <ImageView
-                    style="@style/main_features_image_style"
-                    android:src="@drawable/nfc"/>
+                android:id="@+id/news_section"
+                style="@style/section_style">
                 <TextView
-                    style="@style/main_features_subtitle_style"
-                    android:text="@string/send_money"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/receive_money"
-                style="@style/main_features_layout_style">
-                <ImageView
-                    style="@style/main_features_image_style"
-                    android:src="@drawable/nfc"/>
-                <TextView
-                    style="@style/main_features_subtitle_style"
-                    android:text="@string/receive_money"
-                    />
+                    style="@style/section_header_style"
+                    android:text="@string/chrysus_news_header"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/news_rv"
+                    android:background="@android:color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"/>
+
             </LinearLayout>
         </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        style="@style/section_style">
-        <TextView
-            style="@style/section_header_style"
-            android:text="@string/chrysus_news_header"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/news_rv"
-            android:background="@android:color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"/>
-
-    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
