--- a/app/src/main/res/layout-v21/fragment_home.xml
+++ b/app/src/main/res/layout-v21/fragment_home.xml
@@ -66,7 +66,7 @@
                 android:textAlignment="center"
                 style="@style/white_text"
                 android:textSize="@dimen/medium_text"
-                android:text="@string/city_placeholder"/>
+                android:text="Test"/>
             <TextView
                 android:id="@+id/temperature"
                 android:layout_width="match_parent"
