add reminder setting

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -14,8 +14,8 @@
 
     <SwitchPreference
         android:defaultValue="true"
-        android:key="notifications"
-        android:title="@string/pref_title_new_message_notifications" />
+        android:key="reminders"
+        android:title="Reminder" />
     </PreferenceCategory>
 
 
